# SpecPilot-

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLANv2.md  Q&A.md  README.md  pyproject.toml  项目需求.md
backend/src/specpilot_backend/: __init__.py  config.py  (+4 more)
backend/tests/: test_artifacts.py  test_chunker.py  test_config.py  test_crawl_scope.py  test_demo_seed.py  test_doctor.py  test_failure_classifier.py  test_fixture_binding.py  test_fixture_consistency.py  test_fixture_resolver.py  test_fixture_tokens.py  test_fixtures_api.py  test_fourga_client.py  test_generation_validators.py  test_health.py  test_indexer.py  test_manual_pipeline.py  test_openai_compatible_llm.py  test_prompt_contracts.py  test_report_exports.py  test_reports.py  test_run_execution.py  test_run_reconciliation.py  test_scenario_fixtures_schema.py  test_scenario_item_fixtures.py  test_scenario_schema.py  test_task_builder.py  test_trace_events.py  test_verifier_dispatch.py  test_vision_thresholds.py
docs/: API.md  FIXTURE_PROVISIONING.md  IMPLEMENTATION_PLAN.md  PROMPTS.md  REQUIREMENTS.md  SCHEMAS.md  SPEC.md  SYSTEM_ARCHITECTURE.md  TESTING.md  browser-use.md
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: page-header.tsx
frontend/lib/: api.ts  query-client.ts  sse.ts  store.ts  types.ts
frontend/tests/: app-shell.test.mjs  dashboard.test.mjs  fixture-binding-dialog.test.mjs  logo-background.test.mjs  manual-generation.test.mjs  scenario-table.test.mjs  settings-drawer.test.mjs
(+80 files in other folders)
