[project]
name = "specpilot-backend"
version = "0.1.0"
description = "SpecPilot backend service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "browser-use>=0.12.6,<0.13",
  "chromadb",
  "crawl4ai",
  "fastapi",
  "httpx",
  "langchain-deepseek",
  "langchain-text-splitters",
  "langgraph",
  "pydantic-settings",
  "python-dotenv",
  "sentence-transformers",
  "sqlmodel",
  "sse-starlette",
  "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/specpilot_backend"]

[dependency-groups]
dev = [
  "pytest",
  "pyright",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]

[tool.ruff]
src = ["backend/src", "backend/tests"]
line-length = 88
target-version = "py312"

[tool.pyright]
include = ["backend/src", "backend/tests"]
extraPaths = ["backend/src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
